--- a/Data Engineer SQL and Python/When Was The Golden Age Of Video Games/notebook.ipynb
+++ b/Data Engineer SQL and Python/When Was The Golden Age Of Video Games/notebook.ipynb
@@ -8,17 +8,17 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "srA7CPg62j1d",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "srA7CPg62j1d"
+        ]
       },
       "source": [
         "## 1. The ten best-selling video games\n",
-        "<p><img src=\"https://assets.datacamp.com/production/project_1413/img/video_game.jpg\" alt=\"A video game player choosing a game to play on Nintendo Switch.\" width=\"400\"></p>\n",
+        "<p><img src=\"video_game.jpg\" alt=\"A video game player choosing a game to play on Nintendo Switch.\" width=\"400\"></p>\n",
         "<p>Photo by <a href=\"https://unsplash.com/@retromoon\">Dan Schleusser</a> on <a href=\"https://unsplash.com\">Unsplash</a>.</p>\n",
         "<p>Video games are big business: the global gaming market is projected to be worth more than $300 billion by 2027 according to <a href=\"https://www.mordorintelligence.com/industry-reports/global-gaming-market\">Mordor Intelligence</a>. With so much money at stake, the major game publishers are hugely incentivized to create the next big hit. But are games getting better, or has the golden age of video games already passed?</p>\n",
         "<p>In this project, we'll explore the top 400 best-selling video games created between 1977 and 2020. We'll compare a dataset on game sales with critic and user reviews to determine whether or not video games have improved as the gaming market has grown.</p>\n",
@@ -102,11 +102,11 @@
         "dc": {
           "key": "7"
         },
+        "id": "_tlOj9F32j1g",
+        "outputId": "202373e8-5e98-496b-a530-a4ae82b23bfb",
         "tags": [
           "sample_code"
-        ],
-        "id": "_tlOj9F32j1g",
-        "outputId": "202373e8-5e98-496b-a530-a4ae82b23bfb"
+        ]
       },
       "outputs": [
         {
@@ -248,13 +248,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "LLkRbQJw2j1j",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "LLkRbQJw2j1j"
+        ]
       },
       "source": [
         "## 2. Missing review scores\n",
@@ -269,11 +269,11 @@
         "dc": {
           "key": "14"
         },
+        "id": "AJRYrFn42j1k",
+        "outputId": "13c407b1-d46e-4017-cf88-d10821183032",
         "tags": [
           "sample_code"
-        ],
-        "id": "AJRYrFn42j1k",
-        "outputId": "13c407b1-d46e-4017-cf88-d10821183032"
+        ]
       },
       "outputs": [
         {
@@ -325,13 +325,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "tK7uucxe2j1l",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "tK7uucxe2j1l"
+        ]
       },
       "source": [
         "## 3. Years that video game critics loved\n",
@@ -346,11 +346,11 @@
         "dc": {
           "key": "21"
         },
+        "id": "ogLji9bs2j1l",
+        "outputId": "457a1e1e-b870-423f-beee-143f4b0dfa94",
         "tags": [
           "sample_code"
-        ],
-        "id": "ogLji9bs2j1l",
-        "outputId": "457a1e1e-b870-423f-beee-143f4b0dfa94"
+        ]
       },
       "outputs": [
         {
@@ -453,13 +453,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "chz7Iz4j2j1n",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "chz7Iz4j2j1n"
+        ]
       },
       "source": [
         "## 4. Was 1982 really that great?\n",
@@ -475,11 +475,11 @@
         "dc": {
           "key": "28"
         },
+        "id": "Rc2AkEQv2j1p",
+        "outputId": "4a6c3530-818a-4092-f1ad-0941be2b7474",
         "tags": [
           "sample_code"
-        ],
-        "id": "Rc2AkEQv2j1p",
-        "outputId": "4a6c3530-818a-4092-f1ad-0941be2b7474"
+        ]
       },
       "outputs": [
         {
@@ -592,13 +592,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "FNcgExVW2j1q",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "FNcgExVW2j1q"
+        ]
       },
       "source": [
         "## 5. Years that dropped off the critics' favorites list\n",
@@ -662,11 +662,11 @@
         "dc": {
           "key": "35"
         },
+        "id": "-y7muHGV2j1q",
+        "outputId": "0677bfc0-4e6d-46cb-ecb5-01f4a6f181ee",
         "tags": [
           "sample_code"
-        ],
-        "id": "-y7muHGV2j1q",
-        "outputId": "0677bfc0-4e6d-46cb-ecb5-01f4a6f181ee"
+        ]
       },
       "outputs": [
         {
@@ -746,13 +746,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "nwQ16hOu2j1r",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "nwQ16hOu2j1r"
+        ]
       },
       "source": [
         "## 6. Years video game players loved\n",
@@ -767,11 +767,11 @@
         "dc": {
           "key": "42"
         },
+        "id": "BVFk2T5-2j1s",
+        "outputId": "226cdced-8fc0-4252-c61a-df067de73bea",
         "tags": [
           "sample_code"
-        ],
-        "id": "BVFk2T5-2j1s",
-        "outputId": "226cdced-8fc0-4252-c61a-df067de73bea"
+        ]
       },
       "outputs": [
         {
@@ -885,13 +885,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "-e15lHch2j1t",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "-e15lHch2j1t"
+        ]
       },
       "source": [
         "## 7. Years that both players and critics loved\n",
@@ -961,11 +961,11 @@
         "dc": {
           "key": "49"
         },
+        "id": "zrKoMXiZ2j1t",
+        "outputId": "01b1eeae-6540-4892-dd1c-ede10fcfc9e0",
         "tags": [
           "sample_code"
-        ],
-        "id": "zrKoMXiZ2j1t",
-        "outputId": "01b1eeae-6540-4892-dd1c-ede10fcfc9e0"
+        ]
       },
       "outputs": [
         {
@@ -1022,13 +1022,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "-os5q-ui2j1u",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "-os5q-ui2j1u"
+        ]
       },
       "source": [
         "## 8. Sales in the best video game years\n",
@@ -1043,11 +1043,11 @@
         "dc": {
           "key": "56"
         },
+        "id": "7NOb68iB2j1u",
+        "outputId": "0a43ff2f-4399-4510-fd49-719ed6da169d",
         "tags": [
           "sample_code"
-        ],
-        "id": "7NOb68iB2j1u",
-        "outputId": "0a43ff2f-4399-4510-fd49-719ed6da169d"
+        ]
       },
       "outputs": [
         {
@@ -1109,6 +1109,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -1125,9 +1128,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.7"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
