--- a/Data Engineer SQL and Python/Insurance Upgrades/notebook.ipynb
+++ b/Data Engineer SQL and Python/Insurance Upgrades/notebook.ipynb
@@ -8,13 +8,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "FlHXaer36wUJ",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "FlHXaer36wUJ"
+        ]
       },
       "source": [
         "## Practical Exam: Insurance Upgrades\n",
@@ -24,7 +24,7 @@
         "<p>They need your help to prepare some data before they start to run a new promotion. </p>\n",
         "<p>The data you need is in the database named <code>insurance</code>. </p>\n",
         "<p><strong>Database Schema</strong></p>\n",
-        "<p><img src=\"https://assets.datacamp.com/production/project_1642/img/schema.png\" alt=\"database schema\"></p>\n",
+        "<p><img src=\"schema.png\" alt=\"database schema\"></p>\n",
         "<h2 id=\"task1\">Task 1</h2>\n",
         "<p>The sales team want to use customer information to target their new promotion. But, they think the data may not be clean enough to use. The table below shows what the sales team expect the data types and format to be.</p>\n",
         "<table>\n",
@@ -63,11 +63,11 @@
         "dc": {
           "key": "5"
         },
+        "id": "A6CT-I6r6wUL",
+        "outputId": "adc2aa78-de70-4d1d-c8c5-008e5cabd1bc",
         "tags": [
           "sample_code"
-        ],
-        "id": "A6CT-I6r6wUL",
-        "outputId": "adc2aa78-de70-4d1d-c8c5-008e5cabd1bc"
+        ]
       },
       "outputs": [
         {
@@ -190,13 +190,13 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "InEVrVxd6wUM",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "InEVrVxd6wUM"
+        ]
       },
       "source": [
         "## Task 2\n",
@@ -211,11 +211,11 @@
         "dc": {
           "key": "12"
         },
+        "id": "zTA_i1oN6wUM",
+        "outputId": "acef5da9-965f-4fa5-f0e7-3ca8cd46406f",
         "tags": [
           "sample_code"
-        ],
-        "id": "zTA_i1oN6wUM",
-        "outputId": "acef5da9-965f-4fa5-f0e7-3ca8cd46406f"
+        ]
       },
       "outputs": [
         {
@@ -313,18 +313,18 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "LdzNp8oa6wUN",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "LdzNp8oa6wUN"
+        ]
       },
       "source": [
         "## Task 3\n",
         "<p>The sales team wants to run a promotion on upgrades to international travel insurance policies. They only want to send this promotion to customers who have an active, US policy type.</p>\n",
-        "<p><img src=\"https://assets.datacamp.com/production/project_1642/img/schema.png\" alt=\"database schema\"></p>\n",
+        "<p><img src=\"schema.png\" alt=\"database schema\"></p>\n",
         "<p>Write a query to provide the customer ID and start date for eligible customers. </p>"
       ]
     },
@@ -335,11 +335,11 @@
         "dc": {
           "key": "20"
         },
+        "id": "K_tpqBJd6wUO",
+        "outputId": "a3bfc95f-f3b2-49fb-caa5-6e2c0cd624d6",
         "tags": [
           "sample_code"
-        ],
-        "id": "K_tpqBJd6wUO",
-        "outputId": "a3bfc95f-f3b2-49fb-caa5-6e2c0cd624d6"
+        ]
       },
       "outputs": [
         {
@@ -438,18 +438,18 @@
         },
         "deletable": false,
         "editable": false,
+        "id": "3QjQF8un6wUO",
         "run_control": {
           "frozen": true
         },
         "tags": [
           "context"
-        ],
-        "id": "3QjQF8un6wUO"
+        ]
       },
       "source": [
         "## Task 4\n",
         "<p>After the promotion has been sent, the sales team will need to monitor the number of active policy holders by policy type who purchased an upgrade.  </p>\n",
-        "<p><img src=\"https://assets.datacamp.com/production/project_1642/img/schema.png\" alt=\"database schema\"></p>\n",
+        "<p><img src=\"schema.png\" alt=\"database schema\"></p>\n",
         "<p>Write a query that returns the data for the sales team to monitor. Your output should include <code>policy_type</code> and <code>number_active</code> columns.</p>"
       ]
     },
@@ -460,11 +460,11 @@
         "dc": {
           "key": "28"
         },
+        "id": "8-mCwIRQ6wUP",
+        "outputId": "72846fb8-0843-4e73-c53f-545fc0bb4e57",
         "tags": [
           "sample_code"
-        ],
-        "id": "8-mCwIRQ6wUP",
-        "outputId": "72846fb8-0843-4e73-c53f-545fc0bb4e57"
+        ]
       },
       "outputs": [
         {
@@ -518,6 +518,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -534,9 +537,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.7"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
